[package]
name = "cbsk"
version = "0.3.0"
edition = "2021"
description = "cbsk is a callback socket tool"
readme = "Readme.md"
authors = ["The cbsk developers"]
license = "MIT/Apache-2.0"
categories = ["network-programming"]
keywords = ["socket", "net", "tcp"]
repository = "https://github.com/lifeRobot/cbsk"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cbsk_base = { version = "0.1.7", default-features = false, features = ["macro"] }
cbsk_socket = { version = "0.5.0", default-features = false }

[features]
default = ["client", "tokio_tcp"]
# use system tcp
system_tcp = ["cbsk_socket/system_tcp"]
# use tokio_runtime tcp
tokio_tcp = ["cbsk_socket/tokio_tcp"]
tcp_runtime_thread = ["cbsk_socket/tcp_runtime_thread"]
client = ["cbsk_socket/tcp_client"]
server = ["cbsk_socket/tcp_server"]
