[package]
name = "cbsk"
version = "1.0.8"
edition = "2021"
description = "cbsk is a callback socket tool"
readme = "Readme.md"
authors = ["The cbsk developers"]
license = "MIT/Apache-2.0"
categories = ["network-programming"]
keywords = ["socket", "net", "tcp"]
repository = "https://github.com/lifeRobot/cbsk"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cbsk_base = { version = "0.1.8", default-features = false, features = ["macro"] }
#cbsk_socket = { path = "libs/cbsk_socket", default-features = false }
#cbsk_s_rayon = { path = "libs/cbsk_s_rayon", optional = true, default-features = false }
cbsk_socket = { version = "1.0.1", default-features = false }
cbsk_s_rayon = { version = "1.0.8", optional = true, default-features = false }

[features]
default = ["client_tokio"]
# rayon runtime client
client_rayon = ["cbsk_s_rayon/tcp_client"]
# rayon runtime server
server_rayon = ["cbsk_s_rayon/tcp_server"]
# tokio runtime client
client_tokio = ["cbsk_socket/tokio_tcp", "cbsk_socket/tcp_client"]
# tokio runtime server
server_tokio = ["cbsk_socket/tokio_tcp", "cbsk_socket/tcp_server"]
# debug mode
debug_mode = []