[package]
name = "cbsk_base"
version = "0.1.7"
edition = "2021"
description = "cbsk_base is a locked version cargo crates"
readme = "Readme.md"
authors = ["The cbsk developers"]
license = "MIT/Apache-2.0"
categories = ["data-structures"]
repository = "https://github.com/lifeRobot/cbsk/tree/master/libs/cbsk_base"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", optional = true }
anyhow = { version = "1.0.81", optional = true }
once_cell = { version = "1.19.0", optional = true }

serde = { version = "1.0.197", optional = true }
serde_json = { version = "1.0.114", optional = true }

log = { version = "0.4.21", optional = true }

async-trait = { version = "0.1.78", optional = true }
async-recursion = { version = "1.1.0", optional = true }

[features]
tokio_full = ["tokio/full"]
serde_derive = ["serde/derive"]
serde_derive_json = ["serde_derive", "serde_json"]
serde_all = ["serde_derive_json", "serde/rc"]

macro = []
result = ["macro", "serde_derive_json"]
root_path = []
