[package]
name = "cbsk_base"
version = "2.1.1"
edition = "2021"
description = "cbsk_base is a locked version cargo crates"
readme = "Readme.md"
authors = ["The cbsk developers"]
license = "MIT/Apache-2.0"
categories = ["data-structures"]
repository = "https://github.com/lifeRobot/cbsk/tree/master/libs/cbsk_base"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.43.0", optional = true }
anyhow = { version = "1.0.95", optional = true }
once_cell = { version = "1.20.3", optional = true }

serde = { version = "1.0.217", optional = true }
serde_json = { version = "1.0.138", optional = true }

log = { version = "0.4.25", optional = true }

async-trait = { version = "0.1.86", optional = true }
async-recursion = { version = "1.1.1", optional = true }

parking_lot = { version = "0.12.3", optional = true }

fastdate = { version = "0.3.34", optional = true }

[features]
tokio_full = ["tokio/full"]
serde_derive = ["serde/derive"]
serde_derive_json = ["serde_derive", "serde_json"]
serde_all = ["serde_derive_json", "serde/rc"]

macro = []
result = ["macro", "serde_derive_json"]
root_path = []
