[package]
name = "cbsk_dtp"
version = "0.1.0"
edition = "2021"
description = "cbsk_dtp is a dynamic thread pool"
readme = "Readme.md"
authors = ["The cbsk developers"]
license = "MIT/Apache-2.0"
repository = "https://github.com/lifeRobot/cbsk/tree/master/libs/cbsk_dtp"

[dependencies]
crossbeam-deque = "0.8.5"
cbsk_mut_data = { version = "1.3.10", default-features = false, features = ["vec"] }