[package]
name = "cbsk_file"
version = "2.0.6"
edition = "2021"
description = "cbsk_file is a simple file tool"
readme = "Readme.md"
authors = ["The cbsk developers"]
license = "MIT/Apache-2.0"
repository = "https://github.com/lifeRobot/cbsk/tree/master/libs/cbsk_file"

[dependencies]
#cbsk_base = { path = "../cbsk_base", features = ["macro", "log"] }
cbsk_base = { version = "2.0.6", features = ["macro", "log"] }
