[package]
name = "cbsk_log"
version = "2.0.2"
edition = "2021"
description = "cbsk_log is a log tool"
readme = "Readme.md"
authors = ["The cbsk developers"]
license = "MIT/Apache-2.0"
categories = ["data-structures"]
repository = "https://github.com/lifeRobot/cbsk/tree/master/libs/cbsk_log"

[dependencies]
#cbsk_base = { path = "../cbsk_base", features = ["log", "fastdate", "macro"] }
cbsk_base = { version = "2.0.2", features = ["log", "fastdate", "macro", "parking_lot"] }
