[package]
name = "cbsk_log"
version = "2.1.2"
edition = "2024"
description = "cbsk_log is a log tool"
readme = "Readme.md"
authors = ["The cbsk developers"]
license = "MIT/Apache-2.0"
categories = ["data-structures"]
repository = "https://github.com/lifeRobot/cbsk/tree/master/libs/cbsk_log"

[dependencies]
cbsk_base = { version = "2.1.2", features = ["log", "fastdate", "macro", "parking_lot"] }
