[package]
name = "cbsk_log_rayon"
version = "2.1.0"
edition = "2021"
description = "cbsk_log_rayon is a log tool, using tokio as the runtime"
readme = "Readme.md"
authors = ["The cbsk developers"]
license = "MIT/Apache-2.0"
categories = ["data-structures"]
repository = "https://github.com/lifeRobot/cbsk/tree/master/libs/cbsk_log_rayon"

[dependencies]
crossbeam = "0.8.4"
zip = { version = "2.2.2", default-features = false, features = ["deflate"], optional = true }

#cbsk_base = { path = "../cbsk_base", features = ["log", "parking_lot"] }
#cbsk_file = { path = "../cbsk_file", optional = true }
#cbsk_log = { path = "../cbsk_log" }
#cbsk_timer = { path = "../cbsk_timer" }

cbsk_base = { version = "2.1.0", features = ["log", "parking_lot"] }
cbsk_file = { version = "2.1.0", optional = true }
cbsk_log = "2.1.0"
cbsk_timer = "2.1.0"

[features]
default = ["dir_pack"]
# single file to pack
log_pack = ["zip", "cbsk_file"]
# directory loops to pack
dir_pack = ["zip", "cbsk_file"]