[package]
name = "cbsk_log_rayon"
version = "2.1.2"
edition = "2024"
description = "cbsk_log_rayon is a log tool, using tokio as the runtime"
readme = "Readme.md"
authors = ["The cbsk developers"]
license = "MIT/Apache-2.0"
categories = ["data-structures"]
repository = "https://github.com/lifeRobot/cbsk/tree/master/libs/cbsk_log_rayon"

[dependencies]
crossbeam = "0.8.4"
zip = { version = "4.3.0", default-features = false, features = ["deflate"], optional = true }

cbsk_base = { version = "2.1.2", features = ["log", "parking_lot"] }
cbsk_file = { version = "2.1.2", optional = true }
cbsk_log = "2.1.2"
cbsk_timer = "2.1.2"

[features]
default = ["dir_pack"]
# single file to pack
log_pack = ["zip", "cbsk_file"]
# directory loops to pack
dir_pack = ["zip", "cbsk_file"]