[package]
name = "cbsk_mut_data"
version = "0.1.1"
edition = "2021"
description = "cbsk_mut_data is a ref mut tool"
readme = "Readme.md"
authors = ["The cbsk developers"]
license = "MIT/Apache-2.0"
categories = ["data-structures"]
keywords = ["ref", "mut", "data", "static"]
repository = "https://github.com/lifeRobot/cbsk/tree/master/libs/cbsk_mut_data"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
default = ["vec", "hash_map"]
macro = []
ref = ["macro"]
obj = ["ref"]
vec = ["obj"]
hash_map = ["obj"]