[package]
name = "cbsk_run"
version = "2.0.2"
edition = "2021"
description = "cbsk_run is async pool tool"
readme = "Readme.md"
authors = ["The cbsk developers"]
license = "MIT/Apache-2.0"
categories = ["asynchronous"]
repository = "https://github.com/lifeRobot/cbsk/tree/master/libs/cbsk_run"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#cbsk_base = { path = "../cbsk_base", optional = true }
cbsk_base = { version = "2.0.2", features = ["tokio_full", "anyhow", "log"] }
