[package]
name = "cbsk_s_rayon"
version = "1.3.4"
edition = "2021"
description = "cbsk_s_rayon is a socket callback tool"
readme = "Readme.md"
authors = ["The cbsk developers"]
license = "MIT/Apache-2.0"
categories = ["data-structures", "asynchronous"]
keywords = ["socket", "tcp", "callback", "rayon"]
repository = "https://github.com/lifeRobot/cbsk/tree/master/libs/cbsk_s_rayon"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#cbsk_base = { path = "../cbsk_base", features = ["log", "macro", "once_cell", "parking_lot"] }
#cbsk_mut_data = { path = "../cbsk_mut_data", default-features = false, features = ["vec"] }
#cbsk_timer = { path = "../cbsk_timer" }
#cbsk_socket = { path = "../cbsk_socket", default-features = false }
cbsk_base = { version = "1.3.4", features = ["log", "macro", "once_cell", "anyhow"] }
cbsk_mut_data = { version = "1.3.4", default-features = false, features = ["vec"] }
cbsk_timer = { version = "1.3.4" }
cbsk_socket = { version = "1.3.4", default-features = false }

[features]
default = ["tcp_client"]
tcp_client = ["cbsk_socket/tcp_client", "cbsk_base/parking_lot"]
tcp_server = ["cbsk_socket/tcp_server", "cbsk_base/parking_lot"]
debug_mode = ["cbsk_timer/debug_mode"]
