[package]
name = "cbsk_socket"
version = "1.3.4"
edition = "2021"
description = "cbsk_socket is a socket callback tool"
readme = "Readme.md"
authors = ["The cbsk developers"]
license = "MIT/Apache-2.0"
categories = ["data-structures", "asynchronous"]
keywords = ["socket", "tcp", "ws", "websocket", "callback"]
repository = "https://github.com/lifeRobot/cbsk/tree/master/libs/cbsk_socket"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#cbsk_base = { path = "../cbsk_base", features = ["serde_derive_json", "anyhow", "log"] }
#cbsk_mut_data = { path = "../cbsk_mut_data", default-features = false, features = ["obj"] }
cbsk_base = { version = "1.3.4", features = ["serde_derive_json", "anyhow", "log"] }
cbsk_mut_data = { version = "1.3.4", default-features = false, features = ["obj"] }
fastdate = "0.3.28"

# ws crates
tokio-tungstenite = { version = "0.21.0", optional = true }
futures-util = { version = "0.3.30", default-features = false, optional = true }

[features]
# default use tokio_runtime tcp and tokio_runtime runtime
default = ["tokio_tcp"]
# the tcp use tokio_runtime tcp or system tcp, default is system tcp
tokio_tcp = ["cbsk_base/tokio_full"]
system_tcp = ["cbsk_base/tokio_full"]
tcp_server = ["cbsk_base/async-trait"]
tcp_client = ["cbsk_base/macro", "cbsk_base/async-trait"]
ws_server = ["tokio-tungstenite", "cbsk_base/tokio_full", "futures-util", "cbsk_base/macro"]
ws_client = ["tokio-tungstenite", "cbsk_base/tokio_full", "futures-util", "cbsk_base/macro"]