[package]
name = "cbsk_socket_rayon"
version = "2.0.2"
edition = "2021"
description = "socket callback tool by rayon"
readme = "Readme.md"
authors = ["The cbsk developers"]
license = "MIT/Apache-2.0"
categories = ["data-structures", "asynchronous"]
keywords = ["tcp", "callback"]
repository = "https://github.com/lifeRobot/cbsk/tree/master/libs/cbsk_socket_rayon"

[dependencies]
#cbsk_socket = { path = "../cbsk_socket", optional = true }

cbsk_base = { version = "2.0.2", features = ["log", "macro", "parking_lot", "anyhow", "serde_derive_json"] }
cbsk_timer = "2.0.2"
cbsk_socket = { version = "2.0.2", optional = true }

[features]
default = ["tcp_client"]

tcp_client = ["cbsk_socket/tcp_client"]
tcp_server = ["cbsk_socket/tcp_server"]
debug_mode = []
