[package]
name = "cbsk_socket_tokio"
version = "2.0.3"
edition = "2021"
description = "socket callback tool by tokio"
readme = "Readme.md"
authors = ["The cbsk developers"]
license = "MIT/Apache-2.0"
categories = ["data-structures", "asynchronous"]
keywords = ["tcp", "ws", "websocket", "callback"]
repository = "https://github.com/lifeRobot/cbsk/tree/master/libs/cbsk_socket_tokio"

[dependencies]
#cbsk_socket = { path = "../cbsk_socket", optional = true }

cbsk_base = { version = "2.0.2", features = ["tokio_full", "serde_derive_json", "anyhow", "fastdate", "log"] }
cbsk_mut_data = { version = "2.0.2", default-features = false, optional = true }
cbsk_socket = { version = "2.0.2", optional = true }

# ws crates
tokio-tungstenite = { version = "0.23.1", optional = true }
futures-util = { version = "0.3.30", default-features = false, optional = true }

[features]
default = ["tcp_client"]

tcp_server = ["cbsk_base/async-trait", "cbsk_socket/tcp_server"]
tcp_client = ["cbsk_base/async-trait", "cbsk_socket/tcp_client"]
ws_server = ["tokio-tungstenite", "futures-util", "cbsk_base/macro", "cbsk_socket/ws_server"]
ws_client = ["tokio-tungstenite", "futures-util", "cbsk_base/macro", "cbsk_socket/ws_client", "cbsk_mut_data/obj"]
debug_mode = []