[package]
name = "cbsk_timer"
version = "2.0.2"
edition = "2021"
description = "cbsk_timer is a rayon thread runtime"
readme = "Readme.md"
authors = ["The cbsk developers"]
license = "MIT/Apache-2.0"
categories = ["data-structures"]
keywords = ["rayon", "runtime", "timer"]
repository = "https://github.com/lifeRobot/cbsk/tree/master/libs/cbsk_timer"

[dependencies]
#cbsk_base = { path = "../cbsk_base", features = ["log", "macro", "fastdate"] }
#cbsk_mut_data = { path = "../cbsk_mut_data", default-features = false, features = ["vec"] }
cbsk_base = { version = "2.0.2", features = ["log", "macro", "fastdate"] }
cbsk_mut_data = { version = "2.0.2", default-features = false, features = ["vec"] }
rayon = "1.10.0"

[features]
debug_mode = []