[package]
name = "cbsk_timer"
version = "2.0.6"
edition = "2021"
description = "cbsk_timer is a rayon thread runtime"
readme = "Readme.md"
authors = ["The cbsk developers"]
license = "MIT/Apache-2.0"
categories = ["data-structures"]
keywords = ["rayon", "runtime", "timer"]
repository = "https://github.com/lifeRobot/cbsk/tree/master/libs/cbsk_timer"

[dependencies]
#cbsk_base = { path = "../cbsk_base", features = ["log", "macro", "fastdate", "parking_lot"] }
cbsk_base = { version = "2.0.6", features = ["log", "macro", "fastdate", "parking_lot"] }
rayon = "1.10.0"

[features]
debug_mode = []