[package]
name = "cbsk_unique"
version = "2.0.0"
edition = "2021"
description = "unique value generator"
readme = "Readme.md"
authors = ["The cbsk developers"]
license = "MIT/Apache-2.0"
categories = ["data-structures"]
repository = "https://github.com/lifeRobot/cbsk/tree/master/libs/cbsk_unique"

[dependencies]
sysinfo = { version = "0.31.2", optional = true, default-features = false, features = ["network"] }
cbsk_base = { version = "2.0.0", features = ["parking_lot"] }

[features]
default = ["snowflake"]
# Snowflake Algorithm
snowflake = ["sysinfo"]